remove DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -109,4 +109,6 @@ project/plugins/project/
 *.class
 *.log
 
+**/.DS_Store
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,scala,sbt
